--- a/force-app/main/default/lwc/goalMetrics/goalMetrics.html
+++ b/force-app/main/default/lwc/goalMetrics/goalMetrics.html
@@ -24,7 +24,8 @@
                   </div>
                   <div class="childtext2">
                        {numberofCompleted} Completed <br/>
-                       {numberofInprogress} In Progress<br/>
+                       {numberofActive} Active <br/>
+                       {numberofInprogress} In Progress <br/>
                        {numberofMissed} Missed <br/>
                        {numberofDraft} Draft <br/>
                        
