--- a/force-app/main/default/lwc/kratable/kratable.html
+++ b/force-app/main/default/lwc/kratable/kratable.html
@@ -277,7 +277,7 @@
           <!-- modal body start -->
           <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-2">
             <!-- EDIT MODE -->
-            <c-quarterlykraedit mode={mode} receivedkraid={selectedKraQuaterly} selectedresource={resourceid}> </c-quarterlykraedit>
+            <c-quarterlykraedit mode={mode} receivedkraid={selectedKraQuaterly} selectedresource={resourceid} onclose={hideKRAEditModalBox}> </c-quarterlykraedit>
           </div>
 
           <!-- modal footer start-->
