--- a/force-app/main/default/lwc/myteam/myteam.html
+++ b/force-app/main/default/lwc/myteam/myteam.html
@@ -83,7 +83,7 @@
 
 <template if:true={showkras}>
   <br/>
- <c-kratable tabledata={kratable} resourceid={selectedresource} tab="My Team"></c-kratable>
+ <c-kratable tabledata={kratable} resourceid={selectedresource} onkradata={getTheKRA} tab="My Team"></c-kratable>
 </template>
 
  </template>
