--- a/force-app/main/default/lwc/rewardsAndRecog/rewardsAndRecog.html
+++ b/force-app/main/default/lwc/rewardsAndRecog/rewardsAndRecog.html
@@ -160,7 +160,7 @@
       
           <!-- modal body start -->
           <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
-           <c-annualawards currentfy={currentFY} onclose={modalCloseHandler} > </c-annualawards>
+           <c-annualawards currentfy={currentFY} onclose={modalCloseHandler} onrefreshdata={handleRefreshData}> </c-annualawards>
            </div>
             
           </div>
