--- a/force-app/main/default/lwc/myteam/myteam.html
+++ b/force-app/main/default/lwc/myteam/myteam.html
@@ -14,7 +14,7 @@
 
          <div class="childparent2">
             <div class="childtext2">
-               <lightning-combobox name="" label="Direct Reportees" value={selectedresource} placeholder="Select Resource"
+               <lightning-combobox name="" label="" value={selectedresource} placeholder="Select Resource"
                   options={resourcemapdata} onchange={handleResourceChange} required>
                </lightning-combobox>
          
