--- a/force-app/main/default/lwc/kratable/kratable.html
+++ b/force-app/main/default/lwc/kratable/kratable.html
@@ -33,7 +33,7 @@
 
       <tbody>
 
-        <template if:true={tabledata}>
+        <template if:true={kraTableAvailble}>
           <template for:each={tabledata} for:item="accWithContacts">
             <tr key={accWithContacts.nameid}>
               <td data-label={accWithContacts.nameid}>
@@ -91,7 +91,7 @@
                           <div class="slds-truncate" title="Start Date">Start Date</div>
                         </th>
                         <th class="slds-border_right tableheading" scope="col" >
-                          <div class="slds-truncate" title="End date">End date</div>
+                          <div class="slds-truncate" title="End date">End Date</div>
                         </th>
                         <th class="slds-border_right tableheading" scope="col">
                           <div class="slds-truncate" title="Status">Status</div>
@@ -167,7 +167,7 @@
         </template>
       </tbody>
     </table>
-       <template if:false={tabledata}>
+       <template if:false={kraTableAvailble}>
           <div class="slds-text-align_center slds-p-around_medium">
             <center>No records found for selected Fiscal year.</center>
           </div>
