--- a/force-app/main/default/lwc/pulsetable/pulsetable.html
+++ b/force-app/main/default/lwc/pulsetable/pulsetable.html
@@ -5,40 +5,40 @@
       <thead>
         <tr class="slds-line-height_reset" style="color:lightcoral">
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Pulse Id">Pulse Id</div>
+            <div class="" style="width:100px;" title="Pulse Id">Pulse Id</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Pulse Date">Pulse Date</div>
+            <div class="" style="width:100px;" title="Pulse Date">Pulse Date</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="" title="Career Development">Career Development</div> <!-- smaske : UAT_014 : removed class="slds-truncate"  -->
+            <div class="" style="width:100px;" title="Career Development">Career Development</div> <!-- smaske : UAT_014 : removed class="slds-truncate"  -->
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Job Satisfaction">Job Satisfaction</div>
+            <div class="" style="width:100px;" title="Job Satisfaction">Job Satisfaction</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Work Environment">Work Environment</div>
+            <div class="" style="width:100px;" title="Work Environment">Work Environment</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Communication">Communication</div>
+            <div class="" style="width:100px;" title="Communication">Communication</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Work-Life Balance">Work-Life Balance</div>
+            <div class="" style="width:100px;" title="Work-Life Balance">Work-Life Balance</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="" title="Feedback and Recognition">Feedback and Recognition</div> <!-- smaske : UAT_014 : removed class="slds-truncate"  -->
+            <div class="" style="width:100px;" title="Feedback and Recognition">Feedback and Recognition</div> <!-- smaske : UAT_014 : removed class="slds-truncate"  -->
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="" title="Leadership and Management">Leadership and Management</div> <!-- smaske : UAT_014 : removed class="slds-truncate"  -->
+            <div class="" style="width:100px;" title="Leadership and Management">Leadership and Management</div> <!-- smaske : UAT_014 : removed class="slds-truncate"  -->
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="" title="Overall Rating">Overall Rating</div> <!-- smaske : UAT_014 : removed class="slds-truncate"  -->
+            <div class="" style="width:100px;" title="Overall Rating">Overall Rating</div> <!-- smaske : UAT_014 : removed class="slds-truncate"  -->
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Comments">Overall Comments</div>
+            <div class="" style="width:100px;" title="Comments">Overall Comments</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Status">Status</div>
+            <div class="slds-truncate" style="width:100px;" title="Status">Status</div>
           </th>
          
         </tr>
