--- a/force-app/main/default/lwc/kratable/kratable.html
+++ b/force-app/main/default/lwc/kratable/kratable.html
@@ -20,7 +20,7 @@
             <div class="" title="Rating">Rating</div> <!-- smaske : UAT_014 : removed class="slds-truncate"  -->
           </th>
            <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Next Apprasial">Next Apprasial</div>
+            <div class="slds-truncate" title="Next Appraisal">Next Appraisal</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
             <div class="slds-truncate" title="Last Modified">Last Modified</div>
@@ -91,7 +91,7 @@
                           <div class="slds-truncate" title="Start Date">Start Date</div>
                         </th>
                         <th class="slds-border_right tableheading" scope="col" >
-                          <div class="slds-truncate" title="End date">End Date</div>
+                          <div class="slds-truncate" title="End Date">End Date</div>
                         </th>
                         <th class="slds-border_right tableheading" scope="col">
                           <div class="slds-truncate" title="Status">Status</div>
