--- a/force-app/main/default/lwc/pulseKraRecordFrom/pulseKraRecordFrom.html
+++ b/force-app/main/default/lwc/pulseKraRecordFrom/pulseKraRecordFrom.html
@@ -13,7 +13,7 @@
             <div class="slds-m-top_medium slds-m-bottom_x-large">
                 <div class="slds-p-around_medium lgc-bg">
                     <div class="title">
-            <h2>On a scale of 1 to 5, how would you rate the clarity of goals and expectations in our work environment? Additionally, how well do you feel supported by colleagues and management in fostering a comfortable and safe workplace?</h2>
+            <h2> <b>Work Environment</b>: On a scale of 1 to 5, how would you rate the clarity of goals and expectations in our work environment? Additionally, how well do you feel supported by colleagues and management in fostering a comfortable and safe workplace?</h2>
             <div class="rate">
                         <div class="rate">
                             <input type="radio" id="star5" name="Work Environment" value="5" onchange={rating} />
@@ -37,7 +37,7 @@
             <div class="slds-m-top_medium slds-m-bottom_x-large">
                 <div class="slds-p-around_medium lgc-bg">
                     <div class="title">
-            <h2>How would you rate the efficiency of communication within our team on a scale of 1 to 5? Consider factors like the transparency of information and the availability/responsiveness of supervisors and colleagues.</h2>
+            <h2> <b>Communication</b>: How would you rate the efficiency of communication within our team on a scale of 1 to 5? Consider factors like the transparency of information and the availability/responsiveness of supervisors and colleagues.</h2>
                         <div class="rate">
                             <div class="rate">
                                 <input type="radio" id="star15" name="Communication" value="5" onchange={rating} />
@@ -63,7 +63,7 @@
             <div class="slds-m-top_medium slds-m-bottom_x-large">
                 <div class="slds-p-around_medium lgc-bg">
                     <div class="title">
-            <h2>Considering your career growth, how would you rate the opportunities for professional advancement and development within our organization on a scale of 1 to 5? Do you feel you have clear guidance on potential career paths?</h2>
+            <h2> <b>Career Development</b>: Considering your career growth, how would you rate the opportunities for professional advancement and development within our organization on a scale of 1 to 5? Do you feel you have clear guidance on potential career paths?</h2>
                         <div class="rate">
                             <div class="rate">
                                 <input type="radio" id="star25" name="Career Development" value="5" onchange={rating} />
@@ -88,7 +88,7 @@
             <div class="slds-m-top_medium slds-m-bottom_x-large">
                 <div class="slds-p-around_medium lgc-bg">
                     <div class="title">
-            <h2>When it comes to maintaining a healthy work-life balance, how often do you find yourself working overtime or on weekends? Please rate this aspect on a scale of 1 to 5.</h2>
+            <h2> <b>Work-Life Balance</b>: When it comes to maintaining a healthy work-life balance, how often do you find yourself working overtime or on weekends? Please rate this aspect on a scale of 1 to 5.</h2>
                         <div class="rate">
                             <div class="rate">
                                 <input type="radio" id="star35" name="Work-Life Balance" value="5" onchange={rating} />
@@ -112,7 +112,7 @@
             <div class="slds-m-top_medium slds-m-bottom_x-large">
                 <div class="slds-p-around_medium lgc-bg">
                     <div class="title" >
-            <h2>On a scale of 1 to 5, how frequently do you feel mechanisms are in place to provide input and suggestions? Additionally, how satisfied are you with the recognition and appreciation for your contributions?</h2>
+            <h2> <b>Feedback and Recognition</b>: On a scale of 1 to 5, how frequently do you feel mechanisms are in place to provide input and suggestions? Additionally, how satisfied are you with the recognition and appreciation for your contributions?</h2>
                         <div class="rate">
                             <div class="rate">
                                 <input type="radio" id="star45" name="Feedback and Recognition" value="5"
@@ -141,7 +141,7 @@
             <div class="slds-m-top_medium slds-m-bottom_x-large">
                 <div class="slds-p-around_medium lgc-bg">
                     <div class="title" >
-                        <h2>In your opinion, how effective is our leadership team? Please rate their fairness and consistency in decision-making, as well as the level of managerial support and coaching provided, on a scale of 1 to 5.</h2>
+                        <h2> <b>Leadership and Management</b>: In your opinion, how effective is our leadership team? Please rate their fairness and consistency in decision-making, as well as the level of managerial support and coaching provided, on a scale of 1 to 5.</h2>
                         <div class="rate">
                             <div class="rate">
                                 <input type="radio" id="star50" name="Leadership and Management" value="5"
@@ -170,7 +170,7 @@
             <div class="slds-m-top_medium slds-m-bottom_x-large">
                 <div class="slds-p-around_medium lgc-bg">
                     <div class="title" >
-                        <h2>How satisfied are you with your current job? Please rate your overall satisfaction on a scale of 1 to 5, with 1 being very dissatisfied and 5 being very satisfied.</h2>
+                        <h2> <b>Job Satisfaction</b>: How satisfied are you with your current job? Please rate your overall satisfaction on a scale of 1 to 5, with 1 being very dissatisfied and 5 being very satisfied.</h2>
                         <div class="rate">
                             <div class="rate">
                                 <input type="radio" id="star55" name="Job Satisfaction" value="5"
@@ -197,7 +197,7 @@
 
             <div class="slds-m-top_medium slds-m-bottom_x-large">
                 <div class="slds-p-around_medium lgc-bg">
-                    <p style="color: black;" >Feedback and Comments</p>
+                    <p style="color: black;" ><b>Feedback and Comments</b></p>
                 </div>
                 <div class="slds-p-around_medium lgc-bg">
                     <lightning-input-rich-text class="textRichArea" label="Feedback and Comments" value={FeedbackComments}
