--- a/force-app/main/default/lwc/kratable/kratable.html
+++ b/force-app/main/default/lwc/kratable/kratable.html
@@ -150,7 +150,10 @@
                              <template if:true={contactItem.allowedit}>
                              <lightning-button-icon icon-name="action:edit"  size="large"     variant="bare" alternative-text="Edit KRA"  data-id={contactItem.nameid} onclick={handleConNavEditClick} class="slds-m-left_xx-small"></lightning-button-icon> &nbsp;&nbsp;
                              </template>
-                             <lightning-button-icon icon-name="action:goal"  size="large"     variant="bare" alternative-text="View Goals"  data-id={contactItem.nameid} onclick={handleGaolClick} class="slds-m-left_xx-small"></lightning-button-icon>
+                             <lightning-button-icon icon-name="action:goal"  size="large"     variant="bare" alternative-text="View Goals"  data-id={contactItem.nameid} onclick={handleGaolClick} class="slds-m-left_xx-small"></lightning-button-icon>&nbsp;&nbsp;
+                              <template if:true={contactItem.allowCopy}>
+                              <lightning-button-icon icon-name='utility:copy' alternative-text='copy' data-id={contactItem.nameid} size='large' title='Copy previous quater KRA inputs' onclick={handleCopyPreviousQuaterKRA} variant="bare"  class="slds-m-left_xx-small"></lightning-button-icon>
+                              </template>
                               </div><!--email-->
                           </td>
                         </tr>
@@ -277,7 +280,7 @@
           <!-- modal body start -->
           <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-2">
             <!-- EDIT MODE -->
-            <c-quarterlykraedit mode={mode} receivedkraid={selectedKraQuaterly} selectedresource={resourceid} onclose={hideKRAEditModalBox}> </c-quarterlykraedit>
+            <c-quarterlykraedit mode={mode} receivedkraid={selectedKraQuaterly} selectedresource={resourceid} onclose={hideKRAEditModalBox} tab={tab} copy={copy}> </c-quarterlykraedit>
           </div>
 
           <!-- modal footer start-->
