--- a/force-app/main/default/lwc/myMetrics/myMetrics.html
+++ b/force-app/main/default/lwc/myMetrics/myMetrics.html
@@ -31,7 +31,7 @@
 								disabled={disableButton}></lightning-input>
 							<lightning-input data-id="toggle3" type="toggle" label="Show All KRA's" onchange={kraToggle}
 								message-toggle-active="" message-toggle-inactive=""></lightning-input>
-								<lightning-input data-id="toggle4" type="toggle" label="My project assignments"
+								<lightning-input data-id="toggle4" type="toggle" label="My Project Assignments"
 								onchange={ProjectAssignToggle} message-toggle-active="" message-toggle-inactive="">
 							</lightning-input>
 						</div>
