--- a/force-app/main/default/lwc/projectAssignmentTable/projectAssignmentTable.html
+++ b/force-app/main/default/lwc/projectAssignmentTable/projectAssignmentTable.html
@@ -9,7 +9,7 @@
 		<div class="tableFixHead">
 			<table class="slds-table_cell-buffer slds-no-row-hover slds-table_bordered fixed_header">
 				<thead>
-					<tr class="slds-line-height_reset" style="color:lightcoral">
+					<tr  style="color:lightcoral ">
 						<th class="slds-border_right tableheading" style="width: 15%;" scope="col">
 							<div class="slds-truncate" title="Project Name">Project Name</div>
 						</th>
@@ -52,13 +52,13 @@
 										</lightning-formatted-date-time>
 									</div>
 								</td>
-								<td style=";word-wrap:break-word; width: 15%;" class="overflowModal">
+								<td style=";word-wrap:break-word; width: 15%;padding-bottom:24px;" class="overflowModal">
 
-									<lightning-combobox class="overflowModal" placeholder="Choose PM"
+									<lightning-combobox class="overflowModal" placeholder="-Please Select-"
 										value={mentee.value} data-projectid={mentee.projectid}
 										onchange={handleChangeCombobox} options={mentee.managerOptions}>
 									</lightning-combobox>
-
+                               
 								</td>
 								<td>
 									<lightning-button variant="brand" icon-name="utility:adduser"
@@ -105,11 +105,11 @@
 										onvalueremoved={handleValueRemovedOnAccount}>
 									</c-reusable-lookup>
 									<br/><br/>
-									<lightning-button variant="brand-outline" label="Cancel" title="Cancel"
-										onclick={hideModalBox} icon-name="utility:back">
+									<lightning-button variant="destructive" label="Cancel" title="Cancel"
+										onclick={hideModalBox} class="slds-m-left_x-small">
 									</lightning-button>&nbsp;&nbsp;
-									<lightning-button variant="brand-outline" label="Confirm" title="Confirm"
-										onclick={handleConformModalBox} icon-name="utility:save">
+									<lightning-button variant="brand" label="Select" title="Select"
+										onclick={handleConformModalBox} class="slds-m-top_small">
 									</lightning-button>
 								</center> <br/>
 								<div>
