--- a/force-app/main/default/lwc/myteam/myteam.html
+++ b/force-app/main/default/lwc/myteam/myteam.html
@@ -80,7 +80,7 @@
              message-toggle-active="" message-toggle-inactive=""></lightning-input> -->
 							<lightning-input data-id="toggle3" type="toggle" label="Show All KRA's" onchange={kraToggle}
 								message-toggle-active="" message-toggle-inactive=""></lightning-input>
-							<lightning-input data-id="toggle4" type="toggle" label="Project assignments"
+							<lightning-input data-id="toggle4" type="toggle" label="Project Assignments"
 								onchange={ProjectAssignToggle} message-toggle-active="" message-toggle-inactive="">
 							</lightning-input>
 						</div>
