--- a/force-app/main/default/lwc/goalDataTable/goalDataTable.html
+++ b/force-app/main/default/lwc/goalDataTable/goalDataTable.html
@@ -109,8 +109,7 @@
 														<h2 id="modal-heading-02" class="slds-text-heading_medium slds-hyphenate">Quarterly KRA Edit</h2>
 													</header>																					
 													<div class="slds-modal__content slds-p-around_medium" id="modal-content-id-2">														
-														<c-quarterlykraedit mode={mode} receivedkraid={selectedKraQuaterly} selectedresource={resourceid}
-															onclose={hideKRAEditModalBox} tab="Pending Feedback Request"> </c-quarterlykraedit>
+														<c-quarterlykraedit mode={mode} receivedkraid={selectedKraQuaterly} onclose={hideKRAEditModalBox} tab="Pending Feedback Request"> </c-quarterlykraedit>
 													</div>																					
 													<footer class="slds-modal__footer">									
 														<button class="slds-button slds-button_neutral" onclick={hideKRAEditModalBox}>Close</button>
