updated the code according to the requirement

--- a/force-app/main/default/lwc/goalDataTable/goalDataTable.html
+++ b/force-app/main/default/lwc/goalDataTable/goalDataTable.html
@@ -20,7 +20,7 @@
 							<div class="slds-truncate" title="End Date">End Date</div>
 						</th>
 						<th class="slds-border_right tableheading" scope="col" style="width: 15%;">
-							<div class="slds-truncate"> </div>
+							<div class="slds-truncate" title="End Date"> Actions </div>
 						</th>
 					</tr>
 				</thead>
