--- a/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
+++ b/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
@@ -238,7 +238,7 @@
                                 
 
                                 <lightning-layout-item padding="around-small" size="4"> 
-                                    <lightning-button variant="" label="Save & Next" onclick={handleNextAction}></lightning-button>
+                                    <lightning-button variant="" label="Save/Next" onclick={handleNextAction}></lightning-button>
                                 </lightning-layout-item>
                             </lightning-layout>
                         </lightning-layout-item>
@@ -316,7 +316,7 @@
                                 <!-- Adding SAVE BUTTON -->
 
                                 <lightning-layout-item padding="around-small" size="4"> <!-- smaske :  changed from 6 to 4 -->
-                                    <lightning-button variant="" label="Save & Next" onclick={handleNextAction}></lightning-button>
+                                    <lightning-button variant="" label="Save/Next" onclick={handleNextAction}></lightning-button>
                                 </lightning-layout-item>
                             </lightning-layout>
                         </lightning-layout-item>
@@ -393,7 +393,7 @@
                                 <!-- Adding SAVE BUTTON -->
 
                                 <lightning-layout-item padding="around-small" size="4"> <!-- smaske :  changed from 6 to 4 -->
-                                    <lightning-button variant="" label="Save & Next" onclick={handleNextAction}></lightning-button>
+                                    <lightning-button variant="" label="Save/Next" onclick={handleNextAction}></lightning-button>
                                 </lightning-layout-item>
                             </lightning-layout>
                         </lightning-layout-item>
@@ -471,7 +471,7 @@
                                 <!-- Adding SAVE BUTTON -->
 
                                 <lightning-layout-item padding="around-small" size="4"> <!-- smaske :  changed from 6 to 4 -->
-                                    <lightning-button variant="" label="Save & Next" onclick={handleNextAction}></lightning-button>
+                                    <lightning-button variant="" label="Save/Next" onclick={handleNextAction}></lightning-button>
                                 </lightning-layout-item>
                             </lightning-layout>
                         </lightning-layout-item>
