--- a/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
+++ b/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
@@ -503,7 +503,7 @@
                                     </tr>
                                 </thead>
 
-                                <template lwc:if={SelectedResourceConDetails}>
+                                <template lwc:if={selectedresource}>
                                     <tbody>
                                         <tr class="slds-hint-parent">
                                             <th data-label="Rating Score" scope="row">
