--- a/force-app/main/default/lwc/goalDataTable/goalDataTable.html
+++ b/force-app/main/default/lwc/goalDataTable/goalDataTable.html
@@ -111,11 +111,12 @@
 									             </button>
 														<h2 id="modal-heading-02" class="slds-text-heading_medium slds-hyphenate">Quarterly KRA Edit</h2>
 													</header>																					
-													<div class="slds-modal__content slds-p-around_medium" id="modal-content-id-2">														
-														<c-quarterlykraedit mode={mode} receivedkraid={selectedKraQuaterly} selectedresource={selectedResourceId} onclose={hideKRAEditModalBox}  tab="Pending Feedback Request"> </c-quarterlykraedit>
+													<div class="slds-modal__content slds-p-around_medium" id="modal-content-id-2">
+														<!-- onclose={hideKRAEditModalBox} -->														
+														<c-quarterlykraedit mode={mode} receivedkraid={selectedKraQuaterly} selectedresource={selectedResourceId}   tab="Pending Feedback Request"> </c-quarterlykraedit>
 													</div>																					
 													<footer class="slds-modal__footer">									
-														<button class="slds-button slds-button_neutral" onclick={hideKRAEditModalBox}>Close</button>
+														<button class="slds-button slds-button_neutral" title="Close" onclick={hideKRAEditModalBox}>Close</button>
 													</footer>									
 												</div>
 											</section>
