--- a/force-app/main/default/lwc/genericmodal/genericmodal.html
+++ b/force-app/main/default/lwc/genericmodal/genericmodal.html
@@ -1,6 +1,6 @@
 <template>
     <lightning-modal-header label={headerLable}></lightning-modal-header>
-    <lightning-modal-body class={body}>{bodyLable}</lightning-modal-body>
+    <lightning-modal-body><p class="slds-text-heading_small slds-text-align_center">{bodyLable}</p></lightning-modal-body>
     <lightning-modal-footer>
         <lightning-button label={btnLable1} variant="neutral" onclick={handleClose} class="slds-var-p-right_x-small"></lightning-button>
         <lightning-button label={btnLable2} variant="brand" onclick={handleSave} ></lightning-button>
