--- a/force-app/main/default/lwc/goalDataTable/goalDataTable.html
+++ b/force-app/main/default/lwc/goalDataTable/goalDataTable.html
@@ -3,21 +3,24 @@
 		<div class="tableFixHead">
 			<table class="slds-table_cell-buffer slds-no-row-hover slds-table_bordered fixed_header">
 				<thead>
-					<tr class="slds-line-height_reset" style="color:lightcoral">
+					<tr style="color:lightcoral">
+						<th class="slds-border_right tableheading" scope="col" style="width: 5%;">
+							<div class="slds-truncate" title="Goal Name">KRA Name</div>
+						</th>
 						<th class="slds-border_right tableheading" scope="col" style="width: 15%;">
-							<div class="slds-truncate" title="Goal Name">Goal Name</div>
+							<div class="slds-truncate" title="Project Name">Project Name</div>
 						</th>
 						<th class="slds-border_right tableheading" scope="col" style="width: 15%;">
 							<div class="slds-truncate" title="Resource Name">Resource Name</div>
 						</th>
 						<th class="slds-border_right tableheading" scope="col" style="width: 15%;">
-							<div class="slds-truncate" title="Requested From">Requested From</div>
+							<div class="slds-truncate" title="Requested From">Requested By</div>
 						</th>
 						<th class="slds-border_right tableheading" scope="col" style="width: 5% !important;">
-							<div class="slds-truncate" title="Start Date">Start Date</div>
+							<div class="slds-truncate" title="Project Onboarding Date">Project Onboarding Date</div>
 						</th>
 						<th class="slds-border_right tableheading" scope="col" style="width: 5% !important;">
-							<div class="slds-truncate" title="End Date">End Date</div>
+							<div class="slds-truncate" title="Project Offboarding Date">Project Offboarding Date</div>
 						</th>
 						<th class="slds-border_right tableheading" scope="col" style="width: 15%;">
 							<div class="slds-truncate" title="Actions"> Actions </div>
@@ -29,8 +32,11 @@
 					<template if:true={hasData}>
 						<template for:each={data} for:item="goal">
 							<tr key={goal.Id}>
-								<td style="word-wrap:break-word; width: 15%;">
+								<td style="word-wrap:break-word; width: 10%;">
 									<div class="slds-wrap">{goal.goalName}</div>
+								</td>
+								<td style="word-wrap:break-word; width: 15%;">
+									<div class="slds-wrap">{goal.ProjectName}</div>
 								</td>
 								<td style="width: 15%;">
 									<div class="slds-wrap">
@@ -59,13 +65,15 @@
 									</div>
 								</td>
 								<td class="slds-text-align_center slds-p-around_medium">
-
-									<lightning-button-group>
-										<lightning-button variant="brand-outline" label="Edit" data-id={goal.Id} onclick={editKRAModalPopUp} disabled={goal.hideEditBtn} ></lightning-button>
-										<lightning-button variant="destructive-text" label="Reject" data-id={goal.Id} onclick={showModalPopUp} disabled={goal.hideRejectBtn}></lightning-button>
-										<lightning-button variant="destructive-text" label="Accept" data-id={goal.Id} onclick={acceptRequestHandler} disabled={goal.hideAcceptBtn}></lightning-button>										
-									</lightning-button-group>
-									
+									<template if:false={goal.hideEditBtn}>
+										<lightning-button-icon icon-name="action:edit" size="large" variant="bare" alternative-text="Edit KRA" data-id={goal.Id} onclick={editKRAModalPopUp} class="slds-m-left_xx-small"></lightning-button-icon>
+									</template>		
+									<template if:false={goal.hideRejectBtn}>						
+										<lightning-button variant="destructive" label="Reject" data-id={goal.Id} onclick={showModalPopUp}></lightning-button>
+									</template>
+									<template if:false={goal.hideAcceptBtn}>
+										<lightning-button variant="success" label="Accept" data-id={goal.Id} onclick={acceptRequestHandler}></lightning-button>
+									</template>
 									<template if:true={isShowPopUp}>
 										<section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01"
 											aria-modal="true" aria-describedby="modal-content-id-1"
@@ -113,7 +121,7 @@
 													</header>																					
 													<div class="slds-modal__content slds-p-around_medium" id="modal-content-id-2">
 														<!-- onclose={hideKRAEditModalBox} -->														
-														<c-quarterlykraedit mode={mode} receivedkraid={selectedKraQuaterly} selectedresource={selectedResourceId}   tab="Pending Feedback Request"> </c-quarterlykraedit>
+														<c-quarterlykraedit mode={mode} receivedkraid={selectedKraQuaterly} selectedresource={selectedResourceId} tab="Pending Feedback Request" onmycustomevent={handleCustomEvent}> </c-quarterlykraedit>
 													</div>																					
 													<footer class="slds-modal__footer">									
 														<button class="slds-button slds-button_neutral" title="Close" onclick={hideKRAEditModalBox}>Close</button>
